templates/punch-board_template.yaml
---
# Source: punch-board/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-punch-board
  labels:
    helm.sh/chart: punch-board-8.1.13
    app.kubernetes.io/name: punch-board
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: punch-board
    app.kubernetes.io/instance: release-name
---
# Source: punch-board/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-punch-board
  labels:
    helm.sh/chart: punch-board-8.1.13
    app.kubernetes.io/name: punch-board
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: punch-board
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: punch-board
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-punch-board
      securityContext:
        {}
      containers:
        - name: punch-board
          securityContext:
            {}
          image: "ghcr.io/punchplatform/punch-board:8.1-latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
          resources:
            {}
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: release-name-punch-board
  strategy:
    type: Recreate
---
# Source: punch-board/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-punch-board
  labels:
    helm.sh/chart: punch-board-8.1.13
    app.kubernetes.io/name: punch-board
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 5g
spec:
  rules:
    - host: "punch-board.dpsc"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-punch-board
                port:
                  number: 8080
